--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<h1>{{nombre | titlecase}}</h1>
-<h1>{{valor | number}}</h1>
-<h1>{{obj | json}}</h1>
-
-<button (click)="cambiarNombre()">
-  Cambiarme prro
+<div class="text-layout">
+    <h1>{{ nombre | titlecase }}</h1>
+    <h1>{{ valor | number }}</h1>
+    <h1>{{ obj | json }}</h1>
+</div>
+<button pButton (click)="cambiarNombre()" label="Cambiarme prro">
 </button>
