--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -1,1 +1,23 @@
-<p>basicos works!</p>
+<div class="row text-layout">
+    <div class="col s12">
+        <h1>Pipes básicos</h1>
+        <p>Pipes incluidos en Angular - Usualmente en el Common Module</p>
+    </div>
+</div>
+<div class="row text-layout">
+    <div class="col s4">
+        <p-card header="uppercase" subheader="subheader">
+            Body
+        </p-card>
+    </div>
+    <div class="col s4">
+        <p-card header="header" subheader="subheader">
+            Body
+        </p-card>
+    </div>
+    <div class="col s4">
+        <p-card header="header" subheader="subheader">
+            Body
+        </p-card>
+    </div>
+</div>
