--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -35,6 +35,16 @@
                 <li>fecha | date:'MMMM'</li>
                 <li>fecha | date:'HH:mm dd/LL/YYYY'</li>
             </ul>
+
+            <hr>
+
+            <ul>
+                <li>fecha | date:'long':'GMT-6'</li>
+                <li>fecha | date:'long':'GMT-4'</li>
+                <li>fecha | date:'long':'':'en'</li>
+                <li>fecha | date:'long':'GMT+2':'it'</li>
+                <li>fecha | date:'long':'':'es'</li>
+            </ul>
         </p-card>
     </div>
     <div class="col s6">
@@ -46,6 +56,16 @@
                 <li>{{ fecha | date:'long' }}</li>
                 <li>{{ fecha | date:'MMMM' }}</li>
                 <li>{{ fecha | date:'HH:mm dd/LL/YYYY' }}</li>
+            </ul>
+
+            <hr>
+
+            <ul>
+                <li>{{ fecha | date:'long':'GMT-6' }}</li>
+                <li>{{ fecha | date:'long':'GMT-4' }}</li>
+                <li>{{ fecha | date:'long':'':'en' }}</li>
+                <li>{{ fecha | date:'long':'GMT+2':'it' }}</li>
+                <li>{{ fecha | date:'long':'':'es' }}</li>
             </ul>
         </p-card>
     </div>
