--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -1,6 +1,6 @@
 <div class="row text-layout">
     <div class="col s12">
-        <h1>Pipes básicos</h1>
+        <h1>DécimalPipe y Porcentaje</h1>
         <p>Pipes incluidos en Angular - Usualmente en el Common Module</p>
     </div>
     <div class="col s4">
