--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -1,11 +1,26 @@
 <div class="row text-layout">
+
     <div class="col s12">
         <h1>DécimalPipe y Porcentaje</h1>
         <p>Pipes incluidos en Angular - Usualmente en el Common Module</p>
     </div>
+
     <div class="col s4">
         <p-card header="Ventas neta" subheader="del presente año">
-            <i class="pi pi-dollar"></i> {{ventasNetas | number:'1.2-2'}}
+            <i class="pi pi-dollar"></i> {{(ventasNetas+1000000) | number:'1.2-2'}}
         </p-card>
     </div>
+
+    <div class="col s4">
+        <p-card header="Ventas brutas" subheader="del presente año">
+            {{(ventasNetas+2000000) | currency:'VEF':'symbol-narrow':'1.4-4'}}
+        </p-card>
+    </div>
+
+    <div class="col s4">
+        <p-card header="Ganancia porcentual" subheader="del presente año">
+            {{porcentaje | percent:'1.2-2':'it'}}
+        </p-card>
+    </div>
+
 </div>
