--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,1 +1,17 @@
-<p>no-comunes works!</p>
+<div class="text-layout">
+    <h1>Pipes no comunes</h1>
+    <p>Pipes incluidos en Angular - Usualmente en el Common Module</p>
+</div>
+
+<div class="row text-layout">
+    <div class="col s12 m6 padding5">
+        <p-fieldset legend="i18Select Pipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+    <div class="col s12 m6 padding5">
+        <p-fieldset legend="i18nPuralpipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+</div>
