--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -11,9 +11,9 @@
         </p-fieldset>
     </div>
 
-    <div class="col s12 m6 padding5">
+    <div class="col s2 m6">
         <p-fieldset legend="i18nPuralpipe" [toggleable]="true">
-            Content
+            Actualmente tenemos {{clientes.length | i18nPlural:clientesMap}} cliente esperando
         </p-fieldset>
     </div>
 
