--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -14,13 +14,29 @@
         </button>
     </div>
 
-    <div class="col s2 m6">
+    <div class="col s12 m6 padding5">
         <p-fieldset legend="i18nPuralpipe" [toggleable]="true">
             Actualmente tenemos {{clientes.length | i18nPlural:clientesMap}} cliente esperando
         </p-fieldset>
         <br>
         <button pButton class="p-button-raised p-button-secondary" (click)="eliminarPersona()" label="Eliminar persona">
         </button>
+    </div>
+
+    <div class="col s12 m6 padding5">
+        <p-fieldset legend="Slice Pipe" [toggleable]="true">
+            <b>Original</b>
+            <pre>{{clientes}}</pre>
+            <br>
+            <b>slice:0:2</b>
+            <pre>{{clientes | slice:0:2}}</pre>
+            <br>
+            <b>slice:1:2</b>
+            <pre>{{clientes | slice:1:2}}</pre>
+            <br>
+            <b>slice:1:3</b>
+            <pre>{{clientes | slice:1:3}}</pre>
+        </p-fieldset>
     </div>
 
 </div>
