--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -3,7 +3,7 @@
     <p>Pipes incluidos en Angular - Usualmente en el Common Module</p>
 </div>
 
-<div class="row text-layout">
+<div class="row text-layout flex">
 
     <div class="col s12 m6 padding5">
         <p-fieldset legend="i18Select Pipe" [toggleable]="true">
@@ -43,6 +43,12 @@
                     <b>{{row.key | titlecase}}:</b> {{row.value}}
                 </li>
             </ul>
+        </p-fieldset>
+    </div>
+
+    <div class="col s12 m6 padding5">
+        <p-fieldset legend="Json Pipe" [toggleable]="true">
+            <pre>{{heroes | json}}</pre>
         </p-fieldset>
     </div>
 
