--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,6 @@
-<p>ordenar works!</p>
+<div class="row text-layout">
+  <div class="col s12">
+    <h1>Pipes Personalizados</h1>
+    <p>Pipes creados por {{'nostros' | mayusculas}}</p>
+  </div>
+</div>
