--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,8 +1,68 @@
 <div class="row text-layout">
+
   <div class="col s12">
     <h1>Pipes Personalizados</h1>
     <p>Pipes creados por {{'nostros' | mayusculas:mayuscula}}</p>
   </div>
   <button pButton pRipple label="Cambiar" class="p-button-raised p-button-secondary" (click)="cambiar()">
   </button>
+
+
+  <div class="col s12">
+    <p-toolbar>
+
+      <div class="p-toolbar-group-left">
+      </div>
+
+      <div class="p-toolbar-group-right">
+        <button pButton
+                label="Cambiar"
+                (click)="cambiar()">
+        </button>
+        &nbsp;
+        <button pButton
+                class="p-button-help"
+                icon="pi pi-sort"
+                label="Toogle mayusculas"
+                (click)="cambiar()">
+        </button>
+        &nbsp;
+        <button pButton
+                class="p-button-success"
+                icon="pi pi-sort"
+                label="Valores"
+                (click)="cambiar()">
+        </button>
+        &nbsp;
+        <button pButton
+                class="p-button-warning"
+                icon="pi pi-sort"
+                label="Valores"
+                (click)="cambiar()">
+        </button>
+      </div>
+    </p-toolbar>
+  </div>
+
+  <div class="col s12 padding5">
+    <p-table [value]="[]">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Code</th>
+          <th>Name</th>
+          <th>Category</th>
+          <th>Quantity</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-product>
+        <tr>
+          <td>{{product.code}}</td>
+          <td>{{product.name}}</td>
+          <td>{{product.category}}</td>
+          <td>{{product.quantity}}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+
 </div>
