--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -62,4 +62,23 @@
     </p-table>
   </div>
 
+  <div class="col s12 padding5">
+    <p-table [value]="heroes | slice:0">
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="nombre">Nombre<p-sortIcon field="nombre"></p-sortIcon></th>
+          <th pSortableColumn="vuela">Vuela<p-sortIcon field="vuela"></p-sortIcon></th>
+          <th pSortableColumn="color">Color<p-sortIcon field="color"></p-sortIcon></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-heroe>
+        <tr>
+          <td>{{heroe.nombre}}</td>
+          <td>{{heroe.vuela | vuela}}</td>
+          <td>{{heroe.color}}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+
 </div>
